--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,40 @@
+---
 sudo: required
 env:
-- distribution: centos
-  version: 7
-- distribution: fedora
-  version: 24
-- distribution: ubuntu
-  version: bionic
-- distribution: ubuntu
-  version: trusty
-branches:
-  only:
-      - master
-services:
-- docker
-before_install:
-- openssl aes-256-cbc -K $encrypted_3f2dabfde256_key -iv $encrypted_3f2dabfde256_iv
-  -in travis_key.enc -out travis_key -d
-- eval "$(ssh-agent -s)"
-- chmod 600 /tmp/travis_key
-- ssh-add /tmp/travis_key
-- ssh -o "StrictHostKeyChecking no" ansible@c1.m1 'ansible-playbook WORK/CI_CD/Ansible/playbook.yml'
-- sudo docker pull ${distribution}:${version}
-- sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version}
-  --tag=${distribution}-${version}:ansible travis
-script:
-- container_id=$(mktemp)
-- sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/nginx_role:ro
-  ${distribution}-${version}:ansible > "${container_id}"
-- sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook
-  -v /etc/ansible/roles/nginx_role/travis/test.yml --syntax-check
-- sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook
-  -v /etc/ansible/roles/nginx_role/travis/test.yml
-- 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook
-  -v /etc/ansible/roles/nginx_role/travis/test.yml | grep -q ''changed=0.*failed=0''
-  && (echo ''Idempotence test: pass'' && exit 0) || (echo ''Idempotence test: fail''
-  && exit 1)
+  - distribution: centos
+    version: 7
+  - distribution: fedora
+    version: 24
+  - distribution: ubuntu
+    version: bionic
+  - distribution: ubuntu
+    version: trusty
 
-'
-- sudo docker rm -f "$(cat ${container_id})"
+branches:
+    only:
+        -master
+
+services:
+  - docker
+
+before_install:
+  - openssl aes-256-cbc -K $encrypted_3f2dabfde256_key -iv $encrypted_3f2dabfde256_iv -in travis_key.enc -out travis_key -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/travis_key
+  - ssh-add /tmp/travis_key
+  - ssh -o "StrictHostKeyChecking no" ansible@c1.m1 'ansible-playbook WORK/CI_CD/Ansible/playbook.yml'
+  - 'sudo docker pull ${distribution}:${version}'
+  - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
+
+script:
+  - container_id=$(mktemp)
+  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/nginx_role:ro ${distribution}-${version}:ansible > "${container_id}"'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/nginx_role/travis/test.yml --syntax-check'
+  - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/nginx_role/travis/test.yml'
+  - >
+    sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/nginx_role/travis/test.yml
+    | grep -q 'changed=0.*failed=0'
+    && (echo 'Idempotence test: pass' && exit 0)
+    || (echo 'Idempotence test: fail' && exit 1)
+  - 'sudo docker rm -f "$(cat ${container_id})"'
 
