--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
   - docker
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_3f2dabfde256_key -iv $encrypted_3f2dabfde256_iv -in travis_key.enc -out travis_key -d
+  - openssl aes-256-cbc -K $encrypted_3f2dabfde256_key -iv $encrypted_3f2dabfde256_iv -in travis_key.enc -out /tmp/travis_key -d
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/travis_key
   - ssh-add /tmp/travis_key
