Update section 'before_install'. New section 'after_script' :  .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,6 @@ before_install:
   - eval "$(ssh-agent -s)"
   - chmod 600 /tmp/travis_key
   - ssh-add /tmp/travis_key
-  - ssh -o "StrictHostKeyChecking no" ansible@35.178.22.200 'ansible-playbook -i hosts.yml --tags "ping" playbook.yml'
-  - ssh -o "StrictHostKeyChecking no" ansible@35.178.22.200 'ansible-playbook -i hosts.yml --tags "set_vars, clone_gitrepo" playbook.yml'
   - 'sudo docker pull ${distribution}:${version}'
   - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible travis'
 
@@ -36,4 +34,8 @@ script:
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
   - 'sudo docker rm -f "$(cat ${container_id})"'
+
+after_script:
+  - ssh -o "StrictHostKeyChecking no" ansible@35.178.22.200 'ansible-playbook -i hosts.yml --tags "ping" playbook.yml'
+  - ssh -o "StrictHostKeyChecking no" ansible@35.178.22.200 'ansible-playbook -i hosts.yml --tags "set_vars, clone_gitrepo" playbook.yml'
 
