Env section changed :  .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ sudo: required
 env:
   global:
     - ARTIFACT_NAME="testing-in-travisci-by-ansible.tz"
-  - distribution: ubuntu
-    version: trusty
+  jobs:
+    - distribution: ubuntu
+      version: trusty
 
 branches:
     only:
